--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Glen Chou
-email: gchou [at] mit [dot] edu
+title: Trustworthy Robotics Lab @ Georgia Tech
+email: chou [at] gatech [dot] edu
 description: > # this means to ignore newlines until "baseurl:"
 # baseurl: "/" # the subpath of your site, e.g. /blog/
-url: "http://glenchou.github.io" # the base hostname & protocol for your site
+url: "http://trustworthyrobotics.github.io" # the base hostname & protocol for your site
 # github_username:  gchou95
-gscholar_username: 90whi3wAAAAJ&hl
+gscholar_username: 90whi3wAAAAJ&hls
 # dblp_username: dblp
 rgate_username: Glen_Chou
 
@@ -13,5 +13,4 @@ rgate_username: Glen_Chou
 markdown: kramdown
 
 # Other options
-job.title: "Postdoc"
 excerpt_separator: "<!--more-->"
